included comingsoon.html and updated links for dontspam.html and shapeflip.html download buttons to redirect to comingsoon.html

--- a/On Site Files/public_html/projectSubPages/shapeflip.html
+++ b/On Site Files/public_html/projectSubPages/shapeflip.html
@@ -58,7 +58,7 @@
 
       <br>
 
-      <a href="">
+      <a href="./comingsoon.html">
         <div class="button">
           <span>Download</span>
         </div>
