fixed bad href from dontspam.html download button. Also fixed style for heaing in comingsoon.html

--- a/On Site Files/public_html/projectSubPages/comingsoon.html
+++ b/On Site Files/public_html/projectSubPages/comingsoon.html
@@ -30,7 +30,7 @@
 
     <div class="container-sm">
 
-      <heading>Coming Soon!</heading>
+      <span class="heading">Coming Soon!</span>
 
       <p>This application is currently going through the review process and will be out on the Apple App Store soon! Sorry for the inconvinience and thank you for checking out my work!</p>
 
