--- a/On Site Files/public_html/projectSubPages/dontspam.html
+++ b/On Site Files/public_html/projectSubPages/dontspam.html
@@ -52,7 +52,7 @@
       <br>
       <p>You can check the game out at the iTunes App Store by clicking the download button below.</p>
 
-      <a href=".comingsoon.html">
+      <a href="./comingsoon.html">
         <div class="button">
           <span>Download</span>
         </div>
