Updated project pages with appropriate target fields for a href links.

--- a/On Site Files/public_html/projectSubPages/3towers.html
+++ b/On Site Files/public_html/projectSubPages/3towers.html
@@ -50,7 +50,7 @@
       <br>
       <p>You can check the game out at the iTunes App Store by clicking the download button below.</p>
 
-      <a href="https://itunes.apple.com/us/app/3-towers/id923700202">
+      <a href="https://itunes.apple.com/us/app/3-towers/id923700202" target="_blank">
         <div class="button">
           <span>Download</span>
         </div>
