--- a/On Site Files/public_html/projectSubPages/envlight.html
+++ b/On Site Files/public_html/projectSubPages/envlight.html
@@ -38,7 +38,9 @@
 
       <p>envlight is a match-three game with trivia questions about the environment and product marketing messages by the client which I developed this game for. envlight was made for a Junior Achievement company: Envlight, an eco-friendly company who specializes in using recycled materials that have been collected and processed, thus enabling them to be reused to produce innovative recycled products.</p>
 
-      <p>Envlight was set up from a competition called <a href="https://www.juniorachievement.org/web/ja-usa/home" class="content-link">Junior Achievement</a> that puts participants through a program – enabling them to experience running a company. I was part of the Envlight team which won first place in the Singapore round in 2015. This game was made in a week to help Envlight stand out from the competition in the Asia Pacific round.</p>
+      <p>Envlight was set up from a competition called <a href="https://www.juniorachievement.org/web/ja-usa/home" class="content-link" target="_blank">Junior Achievement</a> that puts participants through a program – enabling them to experience running a company. I was part of the Envlight team which won first place in the Singapore round in 2015.</p>
+
+      <p>This game was made in a week to help Envlight stand out from the competition in the Asia Pacific round. It was built upon the source code from a <a href="http://www.raywenderlich.com/66877/how-to-make-a-game-like-candy-crush-part-1" class="content-link" target="_blank">Ray Wenderlich tutorial</a> as suggested by my lecturer.</p>
 
       <img src="../assets/screenshots/envlight_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
@@ -53,7 +55,7 @@
 
       <br>
 
-      <a href="https://itunes.apple.com/us/app/envlight/id959544937">
+      <a href="https://itunes.apple.com/us/app/envlight/id959544937" target="_blank">
         <div class="button">
           <span>Download</span>
         </div>
