--- a/On Site Files/public_html/projectSubPages/shapeflip.html
+++ b/On Site Files/public_html/projectSubPages/shapeflip.html
@@ -58,7 +58,7 @@
 
       <br>
 
-      <a href="https://itunes.apple.com/us/app/shapeflip/id970287701?mt=8">
+      <a href="https://itunes.apple.com/us/app/shapeflip/id970287701?mt=8" target="_blank">
         <div class="button">
           <span>Download</span>
         </div>
