Updated info for about.

--- a/On Site Files/public_html/about.html
+++ b/On Site Files/public_html/about.html
@@ -77,6 +77,7 @@
 
       <span class="content-text">List of Academic Awards:</span>
       <ul class="content-text">
+        <li>Certificate of Appreciation for contributions to the Game Design & Development Student Interest Group (Academic Year 2014/2015)</li>
         <li>Top O-Level Performers (2014 Celebrations@SST)</li>
         <li>Outstanding All Rounder Student Awards 2011 – School Level Award (North West Community Development Council)</li>
         <li>Edusave Certificate of Academic Achievement 2013 (Ministry of Education)</li>
