Created Life's Lemons content and started on infrastructure of play sub directory.

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -30,6 +30,20 @@
 
     <div class="container">
 
+      <a href="projectSubPages/lifeslemons.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">Life's Lemons</span>
+            <br>
+            PC Game
+          </div>
+
+          <img class="picture-inverse" src="assets/images/lifeslemons.png">
+
+        </div>
+      </a>
+
     <a href="projectSubPages/dontspam.html">
       <div class="project grayscale">
 
@@ -91,6 +105,24 @@
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/lifeslemons.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Life's Lemons</span>
+          <br>
+          <span class="heading">PC Game</span>
+          <br>
+          <a href="projectSubPages/lifeslemons.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
 
       <div class="project-bar-sm">
         <div class="project-sm">
