Added Life Lemon Web Build

--- a/On Site Files/public_html/playSubPages/playlifeslemons.html
+++ b/On Site Files/public_html/playSubPages/playlifeslemons.html
@@ -32,16 +32,18 @@
 
       <span class="heading">Life's Lemons</span>
 
-      <img src="../assets/images/lifeslemons.png" class="app-icon">
-
       <br>
 
-      <p>The Game is still in its early stages. But a development build will be made available soon.</p>
+      <p>The Game is still in its early stages. As such, music, sound effects, and other audio for the game has not been developed yet. Currently the User Interface design is 75% completed. Gameplay wise, the game is almost done. Do try out the game using Unity's webGL by clicking the link below. Keep in mind that Unity's webGL technology is still in preview mode and there may be some quirkiness here and there. The game is built for standalone Linux, Mac, and PC devices. A development build will be made available for download soon.</p>
+
+      <a href="../webGames/LifesLemons_v0.2.2/index.html" target="_blank">
+          <span>Play Web Build (Unity WebGL Preview)</span>
+      </a>
 
       <br>
       <p>Thank you for checking out my game! Click the Play More button to see more games available for download on this site. Click More Projects to see more of my work.</p>
 
-      <a href="../play.html" target="_blank">
+      <a href="../play.html">
         <div class="button">
           <span>Play More</span>
         </div>
