--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -56,7 +56,7 @@
       <br>
       <p>You can play the game or download it by clicking the play button below.</p>
 
-      <a href="../playSubPages/playlifeslemons.html" target="_blank">
+      <a href="../playSubPages/playlifeslemons.html">
         <div class="button">
           <span>Play</span>
         </div>
