Fixed minor alignment issues.

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -112,7 +112,9 @@
         </div>
 
         <div class="description-sm">
-          <span class="heading">Life's Lemons</span>
+          <span class="heading">Life's</span>
+          <br>
+          <span class="heading">Lemons</span>
           <br>
           <span class="heading">PC Game</span>
           <br>
@@ -123,6 +125,8 @@
           </a>
         </div>
       </div>
+
+      <hr class="line-sm">
 
       <div class="project-bar-sm">
         <div class="project-sm">
