--- a/On Site Files/public_html/playSubPages/playlifeslemons.html
+++ b/On Site Files/public_html/playSubPages/playlifeslemons.html
@@ -28,6 +28,16 @@
       </div>
     </div>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Life's Lemons Download Page Top Ad -->
+    <ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-6905932286955941"
+     data-ad-slot="1185405510"></ins>
+     <script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+     </script>
+
     <div class="container-sm">
 
       <span class="heading">Life's Lemons</span>
