--- a/On Site Files/public_html/playSubPages/playlifeslemons.html
+++ b/On Site Files/public_html/playSubPages/playlifeslemons.html
@@ -28,23 +28,15 @@
       </div>
     </div>
 
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Life's Lemons Download Page Top Ad -->
-    <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-6905932286955941"
-     data-ad-slot="1185405510"></ins>
-     <script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-     </script>
-
     <div class="container-sm">
 
       <span class="heading">Life's Lemons</span>
 
       <br>
 
-      <p>The Game is still in its early stages. As such, music, sound effects, and other audio for the game has not been developed yet. Currently the User Interface design is 75% completed. Gameplay wise, the game is almost done. Do try out the game using Unity's webGL by clicking the link below. Keep in mind that Unity's webGL technology is still in preview mode and there may be some quirkiness here and there. The game is built for standalone Linux, Mac, and PC devices. A development build will be made available for download soon.</p>
+      <p>The Game is still in its early stages. As such, music, sound effects, and other audio for the game has not been developed yet. Currently the User Interface design is 75% completed. Gameplay wise, the game is almost done.</p>
+
+      <p>Do try out the game using Unity's webGL by clicking the link below. Keep in mind that Unity's WebGL technology is still in preview mode and there may be some quirkiness here and there. Additionally, the web port is inconsistent with its ability to run on various computers and browsers (e.g. Works fine for me on chrome and firefox but an error occurs when I play on Safari. Friends have tested and failed to get it working on their chrome browsers.) The game is built for standalone Linux, Mac, and PC devices. A development build will be made available for download soon.</p>
 
       <a href="../webGames/LifesLemons_v0.2.2/index.html" target="_blank">
           <span>Play Web Build (Unity WebGL Preview)</span>
