Removed Web Build and "Play" related pages

--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -44,6 +44,8 @@
 
       <p>This project was also the first time where I used github for source control. Although I was the only contributor, it helped me get into the habit of logging my changes. You can view the github project here: <a href="https://github.com/raynertanxw/GADV_LifeLemons" class="content-link" target="_blank">https://github.com/raynertanxw/GADV_LifeLemons</a></p>
 
+      <p>The game is still in development. Currently, the game is left with small aesthetic tweaks and all the sound effects. A build of the game will be made available for download below soon.</p>
+
 <!--
       <img src="../assets/screenshots/dontspam_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
@@ -54,13 +56,7 @@
 -->
 
       <br>
-      <p>You can play the game or download it by clicking the play button below.</p>
-
-      <a href="../playSubPages/playlifeslemons.html">
-        <div class="button">
-          <span>Play</span>
-        </div>
-      </a>
+      <!--<p>You can play the game or download it by clicking the play button below.</p>-->
 
       <a href="../index.html">
         <div class="button">
