Updated life lemons with download buttons of build v0.4
- Included font awesome css and files for download glyphicons
- Included the builds of the game for all three mac, windows, and linux.
- Updated the lifeslemon project subpagee with download buttons and
links to the files.

--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
+    <link rel="stylesheet" href="../styles/font-awesome-4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
@@ -44,7 +45,7 @@
 
       <p>This project was also the first time where I used github for source control. Although I was the only contributor, it helped me get into the habit of logging my changes. You can view the github project here: <a href="https://github.com/raynertanxw/GADV_LifeLemons" class="content-link" target="_blank">https://github.com/raynertanxw/GADV_LifeLemons</a></p>
 
-      <p>The game is still in development. Currently, the game is left with small aesthetic tweaks and all the sound effects. A build of the game will be made available for download below soon.</p>
+      <p>The game is still in development. Currently, the game is in alpha (v0.4). It is without sound effects but the game is fully playable and feedback has been great! You can download a build of the game below. I would love to get your feedback! You can find my contact details by clicking ABOUT at the top.</p>
 
 <!--
       <img src="../assets/screenshots/dontspam_1.png" alt="" class="screenshot-portrait">
@@ -56,7 +57,24 @@
 -->
 
       <br>
-      <!--<p>You can play the game or download it by clicking the play button below.</p>-->
+
+      <div class="downloadIcons">
+
+        <a href="../downloads/lifeslemons/v0.4/LifesLemons_v0.4_MAC.zip" class="downloadIcon">
+          <i class="fa fa-apple fa-3x fa-border"></i>
+        </a>
+
+        <a href="../downloads/lifeslemons/v0.4/LifesLemons_v0.4_WIN.zip" class="downloadIcon">
+          <i class="fa fa-windows fa-3x fa-border"></i>
+        </a>
+
+        <a href="../downloads/lifeslemons/v0.4/LifesLemons_v0.4_LIN.zip" class="downloadIcon">
+          <i class="fa fa-linux fa-3x fa-border"></i>
+        </a>
+      </div>
+
+      <br>
+      <br>
 
       <a href="../index.html">
         <div class="button">
