Updated Main Site for DontSpam Update and android version.

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -50,7 +50,7 @@
         <div class="description">
           <span class="heading">DontSpam</span>
           <br>
-          iOS Game
+          iOS / Android
         </div>
 
         <img class="picture-inverse" src="assets/images/dontspam.png">
@@ -116,7 +116,7 @@
           <br>
           <span class="heading">Lemons</span>
           <br>
-          <span class="heading">PC Game</span>
+          <span class="sub-heading">PC Game</span>
           <br>
           <a href="projectSubPages/lifeslemons.html">
             <div class="button-sm">
@@ -136,7 +136,7 @@
         <div class="description-sm">
           <span class="heading">DontSpam</span>
           <br>
-          <span class="heading">iOS Game</span>
+          <span class="sub-heading">iOS / Android</span>
           <br>
           <a href="projectSubPages/dontspam.html">
             <div class="button-sm">
@@ -156,7 +156,7 @@
         <div class="description-sm">
           <span class="heading">ShapeFlip</span>
           <br>
-          <span class="heading">iOS Game</span>
+          <span class="sub-heading">iOS Game</span>
           <br>
           <a href="projectSubPages/shapeflip.html">
             <div class="button-sm">
@@ -176,7 +176,7 @@
         <div class="description-sm">
           <span class="heading">envlight</span>
           <br>
-          <span class="heading">iOS Game</span>
+          <span class="sub-heading">iOS Game</span>
           <br>
           <a href="projectSubPages/envlight.html">
             <div class="button-sm">
@@ -196,7 +196,7 @@
         <div class="description-sm">
           <span class="heading">3 Towers</span>
           <br>
-          <span class="heading">iOS Game</span>
+          <span class="sub-heading">iOS Game</span>
           <br>
           <a href="projectSubPages/3towers.html">
             <div class="button-sm">
