--- a/On Site Files/public_html/projectSubPages/dontspam.html
+++ b/On Site Files/public_html/projectSubPages/dontspam.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
+    <link rel="stylesheet" href="../styles/font-awesome-4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
@@ -42,6 +43,8 @@
 
       <p>DontSpam is addictively challenging and tests the player’s skill and patience as they resist the urge to spam projectiles into the corners of the cube in hopes of speeding up rotations. Less skilled players can opt to compete for best survival time, which requires less skill.</p>
 
+      <p>UPDATE:<br>During the next semestral school break, the game has since went through a physics change and included the must requested sensitivity slider. The game also went through a complete graphical overhaul. These changes were well received. An android port was made in Unity as well.</p>
+
       <img src="../assets/screenshots/dontspam_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
       <img src="../assets/screenshots/dontspam_2.png" alt="" class="screenshot-portrait">
@@ -50,13 +53,22 @@
       <br class="sm-only-break">
 
       <br>
-      <p>You can check the game out at the iTunes App Store by clicking the download button below.</p>
+      <p>You can check the game out at the iTunes App Store and Google Play Store by clicking the buttons below.</p>
 
-      <a href="https://itunes.apple.com/us/app/dontspam/id977630760?mt=8" target="_blank">
-        <div class="button">
-          <span>Download</span>
-        </div>
-      </a>
+      <div class="downloadIcons">
+
+        <a href="https://itunes.apple.com/us/app/dontspam/id977630760?mt=8" class="downloadIcon" target="_blank">
+          <i class="fa fa-apple fa-3x fa-border"></i>
+        </a>
+
+        <a href="https://play.google.com/store/apps/details?id=com.tanxuewenrayner.DontSpam" class="downloadIcon" target="_blank">
+          <i class="fa fa-android fa-3x fa-border"></i>
+        </a>
+
+      </div>
+
+      <br>
+      <br>
 
       <a href="../index.html">
         <div class="button">
