Updated with Facio Project

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -72,6 +72,20 @@
       </div>
     </a>
 
+    <a href="projectSubPages/facio.html">
+      <div class="project grayscale">
+
+        <div class="description">
+          <span class="heading">Facio</span>
+          <br>
+          iOS / Android
+        </div>
+
+        <img class="picture" src="assets/images/facio.png">
+
+      </div>
+    </a>
+
     <a href="projectSubPages/envlight.html">
       <div class="project grayscale">
 
@@ -159,6 +173,26 @@
           <span class="sub-heading">iOS Game</span>
           <br>
           <a href="projectSubPages/shapeflip.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture" src="assets/images/facio.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Facio</span>
+          <br>
+          <span class="sub-heading">iOS / Android</span>
+          <br>
+          <a href="projectSubPages/facio.html">
             <div class="button-sm">
               <span>Learn More</span>
             </div>
