Commented out various things
- Commented out the password for the app.
- Commented out 3Towers (can remove from portfolio now).

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -100,7 +100,7 @@
       </div>
     </a>
 
-    <a href="projectSubPages/3towers.html">
+    <!-- <a href="projectSubPages/3towers.html">
       <div class="project grayscale">
 
         <div class="description">
@@ -112,7 +112,7 @@
         <img class="picture" src="assets/images/3towers.png">
 
       </div>
-    </a>
+    </a> -->
 
 
 
@@ -222,7 +222,7 @@
 
       <hr class="line-sm">
 
-      <div class="project-bar-sm">
+      <!-- <div class="project-bar-sm">
         <div class="project-sm">
           <img class="picture" src="assets/images/3towers.png">
         </div>
@@ -239,7 +239,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
