Included new content
- Updated LifeLemons with new screenshots.
- Added content for cellulose.

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -30,6 +30,20 @@
 
     <div class="container">
 
+      <a href="projectSubPages/cellulose.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">Cellulose</span>
+            <br>
+            iOS / Android
+          </div>
+
+          <img class="picture-inverse" src="assets/images/cellulose.png">
+
+        </div>
+      </a>
+
       <a href="projectSubPages/lifeslemons.html">
         <div class="project grayscale">
 
@@ -44,81 +58,99 @@
         </div>
       </a>
 
-    <a href="projectSubPages/dontspam.html">
-      <div class="project grayscale">
+      <a href="projectSubPages/dontspam.html">
+        <div class="project grayscale">
 
-        <div class="description">
-          <span class="heading">DontSpam</span>
-          <br>
-          iOS / Android
+          <div class="description">
+            <span class="heading">DontSpam</span>
+            <br>
+            iOS / Android
+          </div>
+
+          <img class="picture-inverse" src="assets/images/dontspam.png">
+
         </div>
+      </a>
 
-        <img class="picture-inverse" src="assets/images/dontspam.png">
+      <a href="projectSubPages/shapeflip.html">
+        <div class="project grayscale">
 
-      </div>
-    </a>
+          <div class="description">
+            <span class="heading">ShapeFlip</span>
+            <br>
+            iOS Game
+          </div>
 
-    <a href="projectSubPages/shapeflip.html">
-      <div class="project grayscale">
+          <img class="picture" src="assets/images/shapeflip.png">
 
-        <div class="description">
-          <span class="heading">ShapeFlip</span>
-          <br>
-          iOS Game
         </div>
+      </a>
 
-        <img class="picture" src="assets/images/shapeflip.png">
+      <a href="projectSubPages/facio.html">
+        <div class="project grayscale">
 
-      </div>
-    </a>
+          <div class="description">
+            <span class="heading">Facio</span>
+            <br>
+            iOS / Android
+          </div>
 
-    <a href="projectSubPages/facio.html">
-      <div class="project grayscale">
+          <img class="picture" src="assets/images/facio.png">
 
-        <div class="description">
-          <span class="heading">Facio</span>
-          <br>
-          iOS / Android
         </div>
+      </a>
 
-        <img class="picture" src="assets/images/facio.png">
+      <a href="projectSubPages/envlight.html">
+        <div class="project grayscale">
 
-      </div>
-    </a>
+          <div class="description">
+            <span class="heading">envlight</span>
+            <br>
+            iOS Game
+          </div>
 
-    <a href="projectSubPages/envlight.html">
-      <div class="project grayscale">
+          <img class="picture" src="assets/images/envlight.png">
 
-        <div class="description">
-          <span class="heading">envlight</span>
-          <br>
-          iOS Game
         </div>
+      </a>
 
-        <img class="picture" src="assets/images/envlight.png">
+      <!-- <a href="projectSubPages/3towers.html">
+        <div class="project grayscale">
 
-      </div>
-    </a>
+          <div class="description">
+            <span class="heading">3 Towers</span>
+            <br>
+            iOS Game
+          </div>
 
-    <!-- <a href="projectSubPages/3towers.html">
-      <div class="project grayscale">
+          <img class="picture" src="assets/images/3towers.png">
 
-        <div class="description">
-          <span class="heading">3 Towers</span>
-          <br>
-          iOS Game
         </div>
-
-        <img class="picture" src="assets/images/3towers.png">
-
-      </div>
-    </a> -->
+      </a> -->
 
 
 
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/cellulose.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Cellulose</span>
+          <br>
+          <span class="sub-heading">iOS / Android</span>
+          <br>
+          <a href="projectSubPages/cellulose.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
 
       <div class="project-bar-sm">
         <div class="project-sm">
