--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -47,14 +47,12 @@
 
       <p>The game is still in development. Currently, the game is in alpha (v0.4). It is without sound effects but the game is fully playable and feedback has been great! You can download a build of the game below. I would love to get your feedback! You can find my contact details by clicking ABOUT at the top.</p>
 
-<!--
-      <img src="../assets/screenshots/dontspam_1.png" alt="" class="screenshot-portrait">
+
+      <img src="../assets/screenshots/lifelemons_1.png" alt="" class="screenshot-landscape">
       <br class="sm-only-break">
-      <img src="../assets/screenshots/dontspam_2.png" alt="" class="screenshot-portrait">
+      <img src="../assets/screenshots/lifelemons_2.png" alt="" class="screenshot-landscape">
       <br class="sm-only-break">
-      <img src="../assets/screenshots/dontspam_3.png" alt="" class="screenshot-portrait">
-      <br class="sm-only-break">
--->
+
 
       <br>
 
