Updated cellulose with gifs
- Also created new class gif-portrait that fixes height of gifs so that
on larger screens they would line up.

--- a/On Site Files/public_html/projectSubPages/cellulose.html
+++ b/On Site Files/public_html/projectSubPages/cellulose.html
@@ -35,6 +35,13 @@
 
       <img src="../assets/images/cellulose.png" class="app-icon">
 
+      <img src="../assets/gifs/cellulose_1.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/gifs/cellulose_2.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/gifs/cellulose_3.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+
       <br>
 
       <p>Cellulose is a mobile face-paced RTS game. Players play the role of a commanding immune system cell, controling groups of child cells to chase after invading viruses.</p>
