--- a/On Site Files/public_html/projectSubPages/dontspam.html
+++ b/On Site Files/public_html/projectSubPages/dontspam.html
@@ -35,6 +35,13 @@
 
       <img src="../assets/images/dontspam.png" class="app-icon">
 
+      <img src="../assets/gifs/dontspam_1.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/gifs/dontspam_2.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+      <img src="../assets/gifs/dontspam_3.gif" alt="" class="gif-portrait">
+      <br class="sm-only-break">
+
       <br>
 
       <p>DontSpam was resulted from seven days of work during my semestral break. The aim of the game was to juggle the red cube within the screen boundaries marked by the red lines. Players control the cube by shooting projectiles from the spaceship to move and rotate it. The spaceship can be controlled via tilting the device. Players can compete for either the longest survival time, or the most number of complete rotations made.</p>
