--- a/On Site Files/public_html/projectSubPages/facio.html
+++ b/On Site Files/public_html/projectSubPages/facio.html
@@ -43,6 +43,9 @@
 
       <img src="../assets/images/facio.png" class="app-icon">
 
+      <img src="../assets/gifs/facio_1.gif" alt="" class="gif-landscape">
+      <br class="sm-only-break">
+
       <br>
 
       <p>Facio was set up from a competition called <a href="https://www.juniorachievement.org/web/ja-usa/home" class="content-link" target="_blank">Junior Achievement</a> that puts participants through a program – enabling them to experience running a company. I was asked by the Facio team to create a game that would help with their business in terms of promotion and sales.</p>
