--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -35,6 +35,11 @@
 
       <img src="../assets/images/lifeslemons.png" class="app-icon">
 
+      <!-- <img src="../assets/gifs/lifeslemons_1.gif" alt="" class="gif-landscape">
+      <br class="sm-only-break"> -->
+      <img src="../assets/gifs/lifeslemons_2.gif" alt="" class="gif-landscape">
+      <br class="sm-only-break">
+
       <br>
 
       <p>Life’s Lemons is a 2D top-down shooter for Mac, PC, and Linux. You play as a fruit juicer by the name of E-Lemonator fighting against the evil Lemon Mafia. Unfortunately, you have no weapon to attack with nor bullets to shoot, and the Lemon Mafia are too fat to be juiced by you! But fear not, for they are foolish enough to shoot you with mini lemons! Convert their mini lemon projectiles into beams of lemon juice and retaliate!</p>
