Included missing line break for mobile version of UI.

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -152,6 +152,8 @@
         </div>
       </div>
 
+      <hr class="line-sm">
+
       <div class="project-bar-sm">
         <div class="project-sm">
           <img class="picture-inverse" src="assets/images/lifeslemons.png">
