Updated About page.

--- a/On Site Files/public_html/about.html
+++ b/On Site Files/public_html/about.html
@@ -42,11 +42,30 @@
 
       <p>Hello there! I am Rayner Tan, and I am an aspiring game developer. My passion lies in the game industry and my dream is to be an Indie game developer.</p>
 
-      <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. I have been programming since the age of 13 and started by exploring javascript to create a quadratic formula calculator.</p>
+      <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya during a school module, I have also started making basic 3D assets. I have been programming since the age of 13 and started by exploring javascript to create a quadratic formula calculator.</p>
 
-      <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, Python, Ruby, and a couple of web languages such as HTML, CSS, and php. I have experience making games and applications using Unity Engine, Xcode, and Eclipse.</p>
+      <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I have experience in making games and applications using Unity Game Engine and Xcode.</p>
 
-      <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies. I love exploring technology and have many interests in the field of science as well.</p>
+      <p>Recently, I have become interested in graphics programming and writing shaders. I picked up OpenGL 3.2 after learning OpenGL 1.0 in school and have gone on to ShaderLab and Cg in Unity.</p>
+
+      <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
+
+      <p>I am also a huge food lover and enjoy sceneic views such as those of Yosemite and also walking under the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
+
+      <hr>
+
+      <span class="heading">Technical Skills</span>
+
+      <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
+
+      <span class="content-text">Current Skills:</span>
+      <ul class="content-text">
+        <li>Proficient in Swift, C#, and C++ programming languages</li>
+        <li>Familiar with OpenGL 1.0, OpenGL 3.2, and Unity ShaderLab and Cg</li>
+        <li>Experienced in Unity Game Engine, Xcode IDE, and SpriteKit frameworks</li>
+        <li>Trained in Adobe Photoshop and Autodesk Maya</li>
+        <li>Possess basic Web Development skills</li>
+      </ul>
 
       <hr>
 
